--- a/src/main/resources/templates/fragments/frag-header.html
+++ b/src/main/resources/templates/fragments/frag-header.html
@@ -1,26 +1,14 @@
-<template th:fragment="header">
+<template th:fragment="default">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</template>
+
+<template th:fragment="bootstrap">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
+</template>
 
-    <style>
-        body {
-            min-height: 100vh;
-            position: relative;
-            background-color: #fbfbfb;
-        }
-
-        .footer-site{
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            border-top-color: #3c44a3;
-        }
-
-        .navbar-nav .nav-item.active{
-            border-bottom: 2px solid white;;
-        }
-    </style>
+<template th:fragment="tailwind">
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </template>
