--- a/src/main/resources/templates/fragments/frag-navbar.html
+++ b/src/main/resources/templates/fragments/frag-navbar.html
@@ -11,11 +11,12 @@
             <a class="nav-link" aria-current="page" th:href="@{/}">Início</a>
           </li>
           <th:block sec:authorize="isAuthenticated()">
-            <li class="nav-item" th:classappend="${#httpServletRequest.requestURI == '/profile'} ? active">
-              <a class="nav-link" aria-current="page" th:href="@{/profile}">Perfil</a>
+            <li class="nav-item" th:classappend="${#httpServletRequest.requestURI == '/user'} ? active">
+              <a class="nav-link" aria-current="page" th:href="@{/user}">Perfil</a>
             </li>
           </th:block>
         </ul>
+        
         <th:block sec:authorize="isAuthenticated()">
           <ul class="navbar-nav ml-auto  mb-lg-0">
             <li class="nav-item">
@@ -23,7 +24,6 @@
             </li>
             <a class="btn btn-danger ml-4" aria-current="page" th:href="@{/logout}"><i class="fas fa-sign-out-alt mr-2" aria-hidden="true"></i>Sair</a>
           </ul>
-
         </th:block>
 
         <th:block sec:authorize="isAnonymous()">
