--- a/src/main/resources/templates/topic/search.html
+++ b/src/main/resources/templates/topic/search.html
@@ -50,21 +50,21 @@
                         <ol class="breadcrumb bg-transparent px-0 mb-0 pb-0">
                           <li class="breadcrumb-item">
                             <a th:href="@{/}">Início</a></li>
-                          <li class="breadcrumb-item active" aria-current="page">topic</li>
+                          <li class="breadcrumb-item active" aria-current="page" th:text="${viewModel.title}"></li>
                         </ol>
                       </nav>
                     <h1 class="display-4" th:text="${viewModel.title}"></h1>
-                    <!-- <p class="lead text-muted">Criado por <th:block th:text="${viewModel.user.name}"></th:block>  </p> -->
+                    <p class="lead text-muted">Criado por <th:block th:text="${viewModel.userName}"></th:block>  </p>
                 </div>
             </div>
             <hr>
             <div class="row mb-4">
                 <div class="col-lg-12 order-lg-0 order-1 my-2">
                     <div class="card shadow-sm px-2 py-3 px-md-4 py-md-5">
-                        <!-- <p class="lead text-right text-black-50" >
+                        <p class="lead text-right text-black-50" >
                             <i class="fas fa-calendar-check mr-3" aria-hidden="true"></i>Criado em:
-                            <th:block th:text="${#temporals.format(topic.createdAt, 'dd/MM/yyyy HH:mm')}"></th:block>
-                        </p> -->
+                            <th:block th:text="${#temporals.format(viewModel.createdAt, 'dd/MM/yyyy HH:mm')}"></th:block>
+                        </p>
                         <p class="lead" th:utext="${viewModel.text}"></p>
                     </div>
                 </div>
