--- a/src/main/resources/templates/fragments/frag-scripts.html
+++ b/src/main/resources/templates/fragments/frag-scripts.html
@@ -3,26 +3,12 @@
 </template>
 
 <template th:fragment="bootstrap">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </template>
 
 <template th:fragment="vuejs">
   <script src="https://unpkg.com/vue@next"></script>
-  <script>
-    const app = Vue.createApp({
-      data(){
-        return {
-          count: 5
-        }
-      },
-      methods: {
-        removeAlert: function(e){
-          console.log(e)
-        }
-      },
-    }).mount("#app");
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.21.1/babel.min.js"></script>
 </template>
 
 <template th:fragment="ckeditor">
